<resources>
    <string name="app_name">PerformMentor</string>
    <string name="login_success">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="error_occurred">An error occurred</string>
    <string name="email_password_required">Please enter email and password</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="user_id_not_found">User ID not found in session</string>
    <string name="failed_to_load_rewards">Failed to load rewards</string>
    <string name="reward_redeemed_successfully">Reward redeemed successfully!</string>
    <string name="failed_to_redeem_reward">Failed to redeem reward</string>
    <string name="take_reward">Take Reward</string>
    <string name="was_taken">Was taken</string>
    <string name="was_not_taken">Was not taken</string>
    <string name="physical_reward">Physical reward</string>
    <string name="virtual_reward">Virtual reward</string>

    <string name="home">Home</string>
    <string name="rewards">Reward</string>
    <string name="work_hours">Work hours</string>

    <string name="work_started_successfully">Work started successfully</string>
    <string name="failed_to_start_work">Failed to start work</string>
    <string name="break_started_successfully">Break started successfully</string>
    <string name="failed_to_start_break">Failed to start break</string>
    <string name="break_ended_successfully">Break ended successfully</string>
    <string name="failed_to_end_break">Failed to end break</string>
    <string name="work_ended_successfully">Work ended successfully</string>
    <string name="failed_to_end_work">Failed to end work</string>

    <string name="start_work">Start work</string>
    <string name="end_work">End work</string>
    <string name="start_break">Start Break</string>
    <string name="end_break">End Break</string>
    <string name="failed_to_fetch_work_hours">Failed to fetch work hours</string>
    <string name="total_work_duration">Total Work Duration (min)</string>
    <string name="total_break_duration">Total Break Duration (min)</string>
    <string name="date_s">Date</string>
    <string name="logout">Log out</string>
</resources>