<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomNavigationView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">

                <Button
                    android:id="@+id/btnStartWork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_work"
                    android:layout_marginBottom="16dp"
                    android:onClick="onStartWorkClicked"/>

                <Button
                    android:id="@+id/btnStartBreak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_break"
                    android:layout_marginBottom="16dp"
                    android:onClick="onStartBreakClicked"/>

                <Button
                    android:id="@+id/btnEndBreak"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/end_break"
                    android:layout_marginBottom="16dp"
                    android:onClick="onEndBreakClicked"/>

                <Button
                    android:id="@+id/btnEndWork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/end_work"
                    android:onClick="onEndWorkClicked"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewWorkHours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"/>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navigation_menu" />
</RelativeLayout>

